// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildAccountHostRelationships should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Account",
      ],
      "_key": "datadog_account:local-integration",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "name": "Local Integration",
          },
        },
      ],
      "_type": "datadog_account",
      "createdOn": undefined,
      "displayName": "Local Integration",
      "name": "Local Integration",
    },
    {
      "_class": [
        "Host",
      ],
      "_key": "datadog_host:11654684",
      "_rawData": [
        {
          "name": "default",
          "rawData": Host {
            "aliases": [
              "spoulton-MBP.local",
            ],
            "apps": [
              "agent",
              "ntp",
            ],
            "awsName": undefined,
            "hostName": "spoulton-MBP.local",
            "id": 11654684,
            "isMuted": false,
            "lastReportedTime": 1675970245,
            "meta": HostMeta {
              "agentChecks": [
                [
                  "io",
                  "io",
                  "io",
                  "OK",
                  "",
                  "",
                ],
                [
                  "cpu",
                  "cpu",
                  "cpu",
                  "OK",
                  "",
                  "",
                ],
                [
                  "ntp",
                  "ntp",
                  "ntp:3c427a42a70bbf8",
                  "OK",
                  "",
                  "",
                ],
                [
                  "network",
                  "network",
                  "network:4b0649b7e11f0772",
                  "OK",
                  "",
                  "",
                ],
                [
                  "load",
                  "load",
                  "load",
                  "OK",
                  "",
                  "",
                ],
                [
                  "disk",
                  "disk",
                  "disk:67cc0574430a16ba",
                  "OK",
                  "",
                  "",
                ],
                [
                  "uptime",
                  "uptime",
                  "uptime",
                  "OK",
                  "",
                  "",
                ],
                [
                  "memory",
                  "memory",
                  "memory",
                  "OK",
                  "",
                  "",
                ],
              ],
              "agentVersion": "7.42.1",
              "cpuCores": 8,
              "fbsdV": [
                null,
                null,
                null,
              ],
              "gohai": "{"cpu":{"cpu_cores":"8","cpu_logical_processors":"16","family":"6","mhz":"2300","model":"158","model_name":"Intel(R) Core(TM) i9-9880H CPU @ 2.30GHz","stepping":"13","vendor_id":"GenuineIntel"},"filesystem":[{"kb_size":"976797816","mounted_on":"/","name":"/dev/disk1s1s1"},{"kb_size":"976797816","mounted_on":"/System/Volumes/Preboot","name":"/dev/disk1s3"},{"kb_size":"976797816","mounted_on":"/System/Volumes/VM","name":"/dev/disk1s5"},{"kb_size":"976797816","mounted_on":"/System/Volumes/Update","name":"/dev/disk1s6"},{"kb_size":"976797816","mounted_on":"/System/Volumes/Data","name":"/dev/disk1s2"}],"memory":{"swap_total":"11264.00M","total":"17179869184"},"network":{"interfaces":[{"ipv4":[],"ipv6":["fe80::aede:48ff:fe00:1122"],"ipv6-network":"fe80::/64","macaddress":"ac:de:48:00:11:22","name":"en7"},{"ipv4":["192.168.0.101"],"ipv4-network":"192.168.0.0/24","ipv6":["fe80::1087:6c6e:ae2d:6e64"],"ipv6-network":"fe80::/64","macaddress":"5c:52:30:9d:2e:7e","name":"en0"},{"ipv4":[],"ipv6":["fe80::64dd:61ff:fe61:b36a"],"ipv6-network":"fe80::/64","macaddress":"66:dd:61:61:b3:6a","name":"awdl0"},{"ipv4":[],"ipv6":[],"name":"en2"},{"ipv4":[],"ipv6":[],"name":"en1"},{"ipv4":[],"ipv6":[],"name":"en3"},{"ipv4":[],"ipv6":[],"name":"en4"},{"ipv4":[],"ipv6":[],"name":"bridge0"},{"ipv4":[],"ipv6":["fe80::64dd:61ff:fe61:b36a"],"ipv6-network":"fe80::/64","macaddress":"66:dd:61:61:b3:6a","name":"llw0"},{"ipv4":[],"ipv6":["fe80::c803:8de1:77c5:66c7"],"ipv6-network":"fe80::/64","name":"utun0"},{"ipv4":[],"ipv6":["fe80::5dce:f773:b48c:e1ff"],"ipv6-network":"fe80::/64","name":"utun1"},{"ipv4":[],"ipv6":["fe80::ce81:b1c:bd2c:69e"],"ipv6-network":"fe80::/64","name":"utun2"},{"ipv4":["192.168.0.114"],"ipv4-network":"192.168.0.0/24","ipv6":["fe80::14af:eaeb:9b56:a318"],"ipv6-network":"fe80::/64","macaddress":"64:4b:f0:20:81:96","name":"en5"},{"ipv4":["192.168.243.62"],"ipv4-network":"192.168.243.0/24","ipv6":[],"name":"utun3"}],"ipaddress":"192.168.0.101","ipaddressv6":"fe80::aede:48ff:fe00:1122","macaddress":"5c:52:30:9d:2e:7e"},"platform":{"GOOARCH":"amd64","GOOS":"darwin","goV":"1.18.9","hostname":"spoulton-MBP.local","kernel_name":"Darwin","kernel_release":"22.2.0","kernel_version":"Darwin Kernel Version 22.2.0: Fri Nov 11 02:08:47 PST 2022; root:xnu-8792.61.2~4/RELEASE_X86_64","machine":"x86_64","os":"Darwin","processor":"i386"}}",
              "installMethod": HostMetaInstallMethod {
                "installerVersion": "install_script_mac-1.1.0",
                "tool": "install_script_mac",
                "toolVersion": "install_script_mac",
              },
              "macV": [
                "13.1",
                [
                  "",
                  "",
                  "",
                ],
                "amd64",
              ],
              "machine": "amd64",
              "nixV": [
                null,
                null,
                null,
              ],
              "platform": "darwin",
              "processor": "Intel(R) Core(TM) i9-9880H CPU @ 2.30GHz",
              "pythonV": "3.8.16",
              "socketFqdn": "localhost",
              "socketHostname": "spoulton-MBP.local",
              "winV": [
                null,
                null,
                null,
              ],
            },
            "metrics": HostMetrics {
              "cpu": 6.2091756,
              "iowait": 0,
              "load": 0.24104817,
            },
            "muteTimeout": null,
            "name": "spoulton-MBP.local",
            "sources": [
              "agent",
            ],
            "tagsBySource": {
              "Datadog": [
                "host:spoulton-MBP.local",
              ],
            },
            "up": true,
          },
        },
      ],
      "_type": "datadog_host",
      "agentVersion": "7.42.1",
      "aliases": [
        "spoulton-MBP.local",
      ],
      "apps": [
        "agent",
        "ntp",
      ],
      "awsName": undefined,
      "createdOn": undefined,
      "displayName": "spoulton-MBP.local",
      "hostCpuCores": 8,
      "hostname": "spoulton-MBP.local",
      "id": "11654684",
      "isMuted": false,
      "machine": "amd64",
      "name": "spoulton-MBP.local",
      "osName": "darwin",
      "osVersion": "13.1 amd64",
      "platform": "darwin",
      "processor": "Intel(R) Core(TM) i9-9880H CPU @ 2.30GHz",
      "pythonVersion": "3.8.16",
      "reportedOn": 1675970245000,
      "socketFqdn": "localhost",
      "socketHostname": "spoulton-MBP.local",
      "sources": [
        "agent",
      ],
      "state": "running",
    },
    {
      "_class": [
        "Host",
      ],
      "_key": "datadog_host:11909091",
      "_rawData": [
        {
          "name": "default",
          "rawData": Host {
            "aliases": [
              "docker-desktop",
            ],
            "apps": [
              "ntp",
              "agent",
              "container",
              "docker",
            ],
            "awsName": undefined,
            "hostName": "docker-desktop",
            "id": 11909091,
            "isMuted": false,
            "lastReportedTime": 1675969918,
            "meta": HostMeta {
              "agentChecks": [
                [
                  "network",
                  "network",
                  "network:4b0649b7e11f0772",
                  "OK",
                  "",
                  "",
                ],
                [
                  "file_handle",
                  "file_handle",
                  "file_handle",
                  "OK",
                  "",
                  "",
                ],
                [
                  "uptime",
                  "uptime",
                  "uptime",
                  "OK",
                  "",
                  "",
                ],
                [
                  "docker",
                  "docker",
                  "docker",
                  "OK",
                  "",
                  "",
                ],
                [
                  "ntp",
                  "ntp",
                  "ntp:3c427a42a70bbf8",
                  "OK",
                  "",
                  "",
                ],
                [
                  "memory",
                  "memory",
                  "memory",
                  "OK",
                  "",
                  "",
                ],
                [
                  "load",
                  "load",
                  "load",
                  "OK",
                  "",
                  "",
                ],
                [
                  "container",
                  "container",
                  "container",
                  "OK",
                  "",
                  "",
                ],
                [
                  "cpu",
                  "cpu",
                  "cpu",
                  "OK",
                  "",
                  "",
                ],
                [
                  "io",
                  "io",
                  "io",
                  "OK",
                  "",
                  "",
                ],
                [
                  "disk",
                  "disk",
                  "disk:67cc0574430a16ba",
                  "OK",
                  "",
                  "",
                ],
              ],
              "agentVersion": "7.42.1",
              "cpuCores": 1,
              "fbsdV": [
                "",
                "",
                "",
              ],
              "gohai": "{"cpu":{"cache_size":"12288 KB","cpu_cores":"6","cpu_logical_processors":"6","family":"6","mhz":"2600.000","model":"158","model_name":"Intel(R) Core(TM) i7-9750H CPU @ 2.60GHz","stepping":"10","vendor_id":"GenuineIntel"},"filesystem":[{"kb_size":"61255492","mounted_on":"/","name":"overlay"},{"kb_size":"65536","mounted_on":"/dev","name":"tmpfs"},{"kb_size":"1016480","mounted_on":"/sys/fs/cgroup","name":"tmpfs"},{"kb_size":"65536","mounted_on":"/dev/shm","name":"shm"},{"kb_size":"61255492","mounted_on":"/etc/hosts","name":"/dev/vda1"},{"kb_size":"203300","mounted_on":"/var/run/docker.sock","name":"tmpfs"},{"kb_size":"10240","mounted_on":"/host/sys/fs/cgroup","name":"cgroup_root"},{"kb_size":"1016480","mounted_on":"/proc/acpi","name":"tmpfs"},{"kb_size":"1016480","mounted_on":"/sys/firmware","name":"tmpfs"}],"memory":{"swap_total":"1048572kB","total":"2032964kB"},"network":null,"platform":{"GOOARCH":"amd64","GOOS":"linux","goV":"1.18.9","hardware_platform":"x86_64","hostname":"78f875a26a88","kernel_name":"Linux","kernel_release":"5.10.47-linuxkit","kernel_version":"#1 SMP Sat Jul 3 21:51:47 UTC 2021","machine":"x86_64","os":"GNU/Linux","processor":"x86_64"}}",
              "installMethod": HostMetaInstallMethod {
                "installerVersion": "docker",
                "tool": "docker",
                "toolVersion": "docker",
              },
              "macV": [
                "",
                "",
                "",
              ],
              "machine": "amd64",
              "nixV": [
                "ubuntu",
                "22.04",
                "",
              ],
              "platform": "linux",
              "processor": "Intel(R) Core(TM) i7-9750H CPU @ 2.60GHz",
              "pythonV": "3.8.16",
              "socketFqdn": "dcef9da35b3a",
              "socketHostname": "dcef9da35b3a",
              "winV": [
                "",
                "",
                "",
              ],
            },
            "metrics": HostMetrics {
              "cpu": 1.5792421,
              "iowait": 0.0034869383,
              "load": 0.020140741,
            },
            "muteTimeout": null,
            "name": "docker-desktop",
            "sources": [
              "agent",
            ],
            "tagsBySource": {
              "Datadog": [
                "host:docker-desktop",
              ],
            },
            "up": true,
          },
        },
      ],
      "_type": "datadog_host",
      "agentVersion": "7.42.1",
      "aliases": [
        "docker-desktop",
      ],
      "apps": [
        "ntp",
        "agent",
        "container",
        "docker",
      ],
      "awsName": undefined,
      "createdOn": undefined,
      "displayName": "docker-desktop",
      "hostCpuCores": 1,
      "hostname": "docker-desktop",
      "id": "11909091",
      "isMuted": false,
      "machine": "amd64",
      "name": "docker-desktop",
      "osName": "linux",
      "osVersion": "ubuntu 22.04",
      "platform": "linux",
      "processor": "Intel(R) Core(TM) i7-9750H CPU @ 2.60GHz",
      "pythonVersion": "3.8.16",
      "reportedOn": 1675969918000,
      "socketFqdn": "dcef9da35b3a",
      "socketHostname": "dcef9da35b3a",
      "sources": [
        "agent",
      ],
      "state": "running",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "datadog_account:local-integration",
      "_key": "datadog_account:local-integration|has|datadog_host:11654684",
      "_toEntityKey": "datadog_host:11654684",
      "_type": "datadog_account_has_host",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "datadog_account:local-integration",
      "_key": "datadog_account:local-integration|has|datadog_host:11909091",
      "_toEntityKey": "datadog_host:11909091",
      "_type": "datadog_account_has_host",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "datadog_account",
    "datadog_host",
    "datadog_account_has_host",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;

exports[`#fetchHosts should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Host",
      ],
      "_key": "datadog_host:11654684",
      "_rawData": [
        {
          "name": "default",
          "rawData": Host {
            "aliases": [
              "spoulton-MBP.local",
            ],
            "apps": [
              "agent",
              "ntp",
            ],
            "awsName": undefined,
            "hostName": "spoulton-MBP.local",
            "id": 11654684,
            "isMuted": false,
            "lastReportedTime": 1675970245,
            "meta": HostMeta {
              "agentChecks": [
                [
                  "io",
                  "io",
                  "io",
                  "OK",
                  "",
                  "",
                ],
                [
                  "cpu",
                  "cpu",
                  "cpu",
                  "OK",
                  "",
                  "",
                ],
                [
                  "ntp",
                  "ntp",
                  "ntp:3c427a42a70bbf8",
                  "OK",
                  "",
                  "",
                ],
                [
                  "network",
                  "network",
                  "network:4b0649b7e11f0772",
                  "OK",
                  "",
                  "",
                ],
                [
                  "load",
                  "load",
                  "load",
                  "OK",
                  "",
                  "",
                ],
                [
                  "disk",
                  "disk",
                  "disk:67cc0574430a16ba",
                  "OK",
                  "",
                  "",
                ],
                [
                  "uptime",
                  "uptime",
                  "uptime",
                  "OK",
                  "",
                  "",
                ],
                [
                  "memory",
                  "memory",
                  "memory",
                  "OK",
                  "",
                  "",
                ],
              ],
              "agentVersion": "7.42.1",
              "cpuCores": 8,
              "fbsdV": [
                null,
                null,
                null,
              ],
              "gohai": "{"cpu":{"cpu_cores":"8","cpu_logical_processors":"16","family":"6","mhz":"2300","model":"158","model_name":"Intel(R) Core(TM) i9-9880H CPU @ 2.30GHz","stepping":"13","vendor_id":"GenuineIntel"},"filesystem":[{"kb_size":"976797816","mounted_on":"/","name":"/dev/disk1s1s1"},{"kb_size":"976797816","mounted_on":"/System/Volumes/Preboot","name":"/dev/disk1s3"},{"kb_size":"976797816","mounted_on":"/System/Volumes/VM","name":"/dev/disk1s5"},{"kb_size":"976797816","mounted_on":"/System/Volumes/Update","name":"/dev/disk1s6"},{"kb_size":"976797816","mounted_on":"/System/Volumes/Data","name":"/dev/disk1s2"}],"memory":{"swap_total":"11264.00M","total":"17179869184"},"network":{"interfaces":[{"ipv4":[],"ipv6":["fe80::aede:48ff:fe00:1122"],"ipv6-network":"fe80::/64","macaddress":"ac:de:48:00:11:22","name":"en7"},{"ipv4":["192.168.0.101"],"ipv4-network":"192.168.0.0/24","ipv6":["fe80::1087:6c6e:ae2d:6e64"],"ipv6-network":"fe80::/64","macaddress":"5c:52:30:9d:2e:7e","name":"en0"},{"ipv4":[],"ipv6":["fe80::64dd:61ff:fe61:b36a"],"ipv6-network":"fe80::/64","macaddress":"66:dd:61:61:b3:6a","name":"awdl0"},{"ipv4":[],"ipv6":[],"name":"en2"},{"ipv4":[],"ipv6":[],"name":"en1"},{"ipv4":[],"ipv6":[],"name":"en3"},{"ipv4":[],"ipv6":[],"name":"en4"},{"ipv4":[],"ipv6":[],"name":"bridge0"},{"ipv4":[],"ipv6":["fe80::64dd:61ff:fe61:b36a"],"ipv6-network":"fe80::/64","macaddress":"66:dd:61:61:b3:6a","name":"llw0"},{"ipv4":[],"ipv6":["fe80::c803:8de1:77c5:66c7"],"ipv6-network":"fe80::/64","name":"utun0"},{"ipv4":[],"ipv6":["fe80::5dce:f773:b48c:e1ff"],"ipv6-network":"fe80::/64","name":"utun1"},{"ipv4":[],"ipv6":["fe80::ce81:b1c:bd2c:69e"],"ipv6-network":"fe80::/64","name":"utun2"},{"ipv4":["192.168.0.114"],"ipv4-network":"192.168.0.0/24","ipv6":["fe80::14af:eaeb:9b56:a318"],"ipv6-network":"fe80::/64","macaddress":"64:4b:f0:20:81:96","name":"en5"},{"ipv4":["192.168.243.62"],"ipv4-network":"192.168.243.0/24","ipv6":[],"name":"utun3"}],"ipaddress":"192.168.0.101","ipaddressv6":"fe80::aede:48ff:fe00:1122","macaddress":"5c:52:30:9d:2e:7e"},"platform":{"GOOARCH":"amd64","GOOS":"darwin","goV":"1.18.9","hostname":"spoulton-MBP.local","kernel_name":"Darwin","kernel_release":"22.2.0","kernel_version":"Darwin Kernel Version 22.2.0: Fri Nov 11 02:08:47 PST 2022; root:xnu-8792.61.2~4/RELEASE_X86_64","machine":"x86_64","os":"Darwin","processor":"i386"}}",
              "installMethod": HostMetaInstallMethod {
                "installerVersion": "install_script_mac-1.1.0",
                "tool": "install_script_mac",
                "toolVersion": "install_script_mac",
              },
              "macV": [
                "13.1",
                [
                  "",
                  "",
                  "",
                ],
                "amd64",
              ],
              "machine": "amd64",
              "nixV": [
                null,
                null,
                null,
              ],
              "platform": "darwin",
              "processor": "Intel(R) Core(TM) i9-9880H CPU @ 2.30GHz",
              "pythonV": "3.8.16",
              "socketFqdn": "localhost",
              "socketHostname": "spoulton-MBP.local",
              "winV": [
                null,
                null,
                null,
              ],
            },
            "metrics": HostMetrics {
              "cpu": 6.2091756,
              "iowait": 0,
              "load": 0.24104817,
            },
            "muteTimeout": null,
            "name": "spoulton-MBP.local",
            "sources": [
              "agent",
            ],
            "tagsBySource": {
              "Datadog": [
                "host:spoulton-MBP.local",
              ],
            },
            "up": true,
          },
        },
      ],
      "_type": "datadog_host",
      "agentVersion": "7.42.1",
      "aliases": [
        "spoulton-MBP.local",
      ],
      "apps": [
        "agent",
        "ntp",
      ],
      "awsName": undefined,
      "createdOn": undefined,
      "displayName": "spoulton-MBP.local",
      "hostCpuCores": 8,
      "hostname": "spoulton-MBP.local",
      "id": "11654684",
      "isMuted": false,
      "machine": "amd64",
      "name": "spoulton-MBP.local",
      "osName": "darwin",
      "osVersion": "13.1 amd64",
      "platform": "darwin",
      "processor": "Intel(R) Core(TM) i9-9880H CPU @ 2.30GHz",
      "pythonVersion": "3.8.16",
      "reportedOn": 1675970245000,
      "socketFqdn": "localhost",
      "socketHostname": "spoulton-MBP.local",
      "sources": [
        "agent",
      ],
      "state": "running",
    },
    {
      "_class": [
        "Host",
      ],
      "_key": "datadog_host:11909091",
      "_rawData": [
        {
          "name": "default",
          "rawData": Host {
            "aliases": [
              "docker-desktop",
            ],
            "apps": [
              "ntp",
              "agent",
              "container",
              "docker",
            ],
            "awsName": undefined,
            "hostName": "docker-desktop",
            "id": 11909091,
            "isMuted": false,
            "lastReportedTime": 1675969918,
            "meta": HostMeta {
              "agentChecks": [
                [
                  "network",
                  "network",
                  "network:4b0649b7e11f0772",
                  "OK",
                  "",
                  "",
                ],
                [
                  "file_handle",
                  "file_handle",
                  "file_handle",
                  "OK",
                  "",
                  "",
                ],
                [
                  "uptime",
                  "uptime",
                  "uptime",
                  "OK",
                  "",
                  "",
                ],
                [
                  "docker",
                  "docker",
                  "docker",
                  "OK",
                  "",
                  "",
                ],
                [
                  "ntp",
                  "ntp",
                  "ntp:3c427a42a70bbf8",
                  "OK",
                  "",
                  "",
                ],
                [
                  "memory",
                  "memory",
                  "memory",
                  "OK",
                  "",
                  "",
                ],
                [
                  "load",
                  "load",
                  "load",
                  "OK",
                  "",
                  "",
                ],
                [
                  "container",
                  "container",
                  "container",
                  "OK",
                  "",
                  "",
                ],
                [
                  "cpu",
                  "cpu",
                  "cpu",
                  "OK",
                  "",
                  "",
                ],
                [
                  "io",
                  "io",
                  "io",
                  "OK",
                  "",
                  "",
                ],
                [
                  "disk",
                  "disk",
                  "disk:67cc0574430a16ba",
                  "OK",
                  "",
                  "",
                ],
              ],
              "agentVersion": "7.42.1",
              "cpuCores": 1,
              "fbsdV": [
                "",
                "",
                "",
              ],
              "gohai": "{"cpu":{"cache_size":"12288 KB","cpu_cores":"6","cpu_logical_processors":"6","family":"6","mhz":"2600.000","model":"158","model_name":"Intel(R) Core(TM) i7-9750H CPU @ 2.60GHz","stepping":"10","vendor_id":"GenuineIntel"},"filesystem":[{"kb_size":"61255492","mounted_on":"/","name":"overlay"},{"kb_size":"65536","mounted_on":"/dev","name":"tmpfs"},{"kb_size":"1016480","mounted_on":"/sys/fs/cgroup","name":"tmpfs"},{"kb_size":"65536","mounted_on":"/dev/shm","name":"shm"},{"kb_size":"61255492","mounted_on":"/etc/hosts","name":"/dev/vda1"},{"kb_size":"203300","mounted_on":"/var/run/docker.sock","name":"tmpfs"},{"kb_size":"10240","mounted_on":"/host/sys/fs/cgroup","name":"cgroup_root"},{"kb_size":"1016480","mounted_on":"/proc/acpi","name":"tmpfs"},{"kb_size":"1016480","mounted_on":"/sys/firmware","name":"tmpfs"}],"memory":{"swap_total":"1048572kB","total":"2032964kB"},"network":null,"platform":{"GOOARCH":"amd64","GOOS":"linux","goV":"1.18.9","hardware_platform":"x86_64","hostname":"78f875a26a88","kernel_name":"Linux","kernel_release":"5.10.47-linuxkit","kernel_version":"#1 SMP Sat Jul 3 21:51:47 UTC 2021","machine":"x86_64","os":"GNU/Linux","processor":"x86_64"}}",
              "installMethod": HostMetaInstallMethod {
                "installerVersion": "docker",
                "tool": "docker",
                "toolVersion": "docker",
              },
              "macV": [
                "",
                "",
                "",
              ],
              "machine": "amd64",
              "nixV": [
                "ubuntu",
                "22.04",
                "",
              ],
              "platform": "linux",
              "processor": "Intel(R) Core(TM) i7-9750H CPU @ 2.60GHz",
              "pythonV": "3.8.16",
              "socketFqdn": "dcef9da35b3a",
              "socketHostname": "dcef9da35b3a",
              "winV": [
                "",
                "",
                "",
              ],
            },
            "metrics": HostMetrics {
              "cpu": 1.5792421,
              "iowait": 0.0034869383,
              "load": 0.020140741,
            },
            "muteTimeout": null,
            "name": "docker-desktop",
            "sources": [
              "agent",
            ],
            "tagsBySource": {
              "Datadog": [
                "host:docker-desktop",
              ],
            },
            "up": true,
          },
        },
      ],
      "_type": "datadog_host",
      "agentVersion": "7.42.1",
      "aliases": [
        "docker-desktop",
      ],
      "apps": [
        "ntp",
        "agent",
        "container",
        "docker",
      ],
      "awsName": undefined,
      "createdOn": undefined,
      "displayName": "docker-desktop",
      "hostCpuCores": 1,
      "hostname": "docker-desktop",
      "id": "11909091",
      "isMuted": false,
      "machine": "amd64",
      "name": "docker-desktop",
      "osName": "linux",
      "osVersion": "ubuntu 22.04",
      "platform": "linux",
      "processor": "Intel(R) Core(TM) i7-9750H CPU @ 2.60GHz",
      "pythonVersion": "3.8.16",
      "reportedOn": 1675969918000,
      "socketFqdn": "dcef9da35b3a",
      "socketHostname": "dcef9da35b3a",
      "sources": [
        "agent",
      ],
      "state": "running",
    },
  ],
  "collectedRelationships": [],
  "encounteredTypes": [
    "datadog_host",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 0,
}
`;
